--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,13 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   allow:
+    - dependency-name: "clean-css"
+    - dependency-name: "esbuild"
+    - dependency-name: "fontfaceobserver"
+    - dependency-name: "hashids"
+    - dependency-name: "lodash-es"
+    - dependency-name: "utility-types"
+    - dependency-name: "zod"
     - dependency-name: "*"
       dependency-type: "production"
   schedule:
