--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@commitlint/config-conventional": "12.1.4",
     "@ls-lint/ls-lint": "1.9.2",
     "@types/chai": "4.2.18",
+    "@types/clean-css": "^4.2.5",
+    "@types/csso": "^4.2.0",
+    "@types/fontfaceobserver": "^2.1.0",
+    "@types/lodash-es": "^4.17.4",
     "@types/mocha": "8.2.2",
     "@types/node": "15.6.1",
     "@typescript-eslint/eslint-plugin": "4.25.0",
@@ -16,17 +20,27 @@
     "c8": "7.7.2",
     "chai": "4.3.4",
     "codecov": "3.8.2",
-    "esbuild": "0.12.5",
     "eslint": "7.27.0",
     "eslint-config-escapace": "3.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard-with-typescript": "20.0.0",
     "eslint-plugin-import": "2.23.4",
+    "clean-css": "^5.1.5",
+    "esbuild": "^0.12.5",
+    "execa": "^5.1.1",
+    "fontfaceobserver": "^2.1.0",
+    "hashids": "^2.2.8",
+    "lodash-es": "^4.17.21",
+    "utility-types": "^3.10.0",
+    "zod": "^3.8.1",
     "eslint-plugin-jsdoc": "35.1.0",
     "eslint-plugin-no-null": "1.0.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.0",
     "fast-glob": "3.2.5",
+    "fastify": "^3.20.2",
+    "fastify-sensible": "^3.1.1",
+    "fastify-static": "^4.2.3",
     "fs-extra": "9.1.0",
     "husky": "6.0.0",
     "is-ci": "3.0.0",
@@ -41,35 +55,21 @@
   "engines": {
     "node": ">=14.17.0"
   },
-  "exports": {
-    "browser": {
-      "import": "./lib/browser/index.js"
-    },
-    "node": {
-      "import": "./lib/node/index.js"
-    }
-  },
   "files": [
     "lib"
   ],
   "homepage": "https://github.com/escapace/typescript-library-starter",
   "license": "MPL-2.0",
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "repository": "https://github.com/escapace/typescript-library-starter.git",
   "scripts": {
-    "build": "rm -rf lib && mkdir -p lib/browser lib/node lib/types && npm run build:node && npm run build:browser && npm run build:types",
-    "build:browser": "esbuild src/index.ts --bundle --minify --sourcemap --format=esm --outfile=./lib/browser/index.js",
-    "build:node": "esbuild src/index.ts --bundle --sourcemap --format=esm --platform=node --target=node14.17.0 --outfile=./lib/node/index.js",
-    "build:types": "tsc --emitDeclarationOnly --declarationDir lib/types",
+    "build": "node ./scripts/build.mjs",
     "lint": "ls-lint && eslint 'src/**/*.ts?(x)'",
     "prepare": "is-ci || husky install",
-    "test": "node ./scripts/test.js && c8 mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
+    "test": "node ./scripts/test.mjs && c8 mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
   "type": "module",
-  "types": "lib/types/index.d.ts"
+  "dependencies": {}
 }
