--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "allowUnreachableCode": false,
+    "isolatedModules": true,
     "allowUnusedLabels": false,
     "declaration": true,
     "declarationMap": true,
@@ -8,7 +10,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": false,
-    "lib": ["es2015", "es2015.promise", "es2016", "es2017", "esnext"],
+    "lib": ["es2015", "es2015.promise", "es2016", "es2017", "esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -23,5 +25,5 @@
     "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
   },
-  "include": ["./src/**/*"]
+  "include": ["src", "test"]
 }
