--- a/package.json
+++ b/package.json
@@ -9,48 +9,48 @@
     "@commitlint/config-conventional": "12.1.4",
     "@ls-lint/ls-lint": "1.9.2",
     "@types/chai": "4.2.18",
-    "@types/clean-css": "^4.2.5",
-    "@types/csso": "^4.2.0",
-    "@types/fontfaceobserver": "^2.1.0",
-    "@types/lodash-es": "^4.17.4",
+    "@types/clean-css": "4.2.5",
+    "@types/csso": "4.2.0",
+    "@types/fontfaceobserver": "2.1.0",
+    "@types/lodash-es": "4.17.4",
     "@types/mocha": "8.2.2",
     "@types/node": "15.6.1",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
     "c8": "7.7.2",
     "chai": "4.3.4",
+    "clean-css": "5.1.5",
     "codecov": "3.8.2",
+    "esbuild": "0.12.24",
     "eslint": "7.27.0",
     "eslint-config-escapace": "3.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard-with-typescript": "20.0.0",
     "eslint-plugin-import": "2.23.4",
-    "clean-css": "^5.1.5",
-    "esbuild": "^0.12.24",
-    "execa": "^5.1.1",
-    "fontfaceobserver": "^2.1.0",
-    "hashids": "^2.2.8",
-    "lodash-es": "^4.17.21",
-    "utility-types": "^3.10.0",
-    "zod": "^3.8.1",
     "eslint-plugin-jsdoc": "35.1.0",
     "eslint-plugin-no-null": "1.0.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.0",
+    "execa": "5.1.1",
     "fast-glob": "3.2.5",
-    "fastify": "^3.20.2",
-    "fastify-sensible": "^3.1.1",
-    "fastify-static": "^4.2.3",
+    "fastify": "3.20.2",
+    "fastify-sensible": "3.1.1",
+    "fastify-static": "4.2.3",
+    "fontfaceobserver": "2.1.0",
     "fs-extra": "9.1.0",
+    "hashids": "2.2.8",
     "husky": "6.0.0",
     "is-ci": "3.0.0",
     "lint-staged": "11.0.0",
+    "lodash-es": "4.17.21",
     "mocha": "8.4.0",
     "prettier": "2.3.0",
     "prettier-config-escapace": "1.0.0",
     "semantic-release": "17.4.3",
     "syncpack": "5.7.11",
-    "typescript": "4.3.2"
+    "typescript": "4.3.2",
+    "utility-types": "3.10.0",
+    "zod": "3.8.1"
   },
   "engines": {
     "node": ">=14.17.0"
@@ -70,6 +70,5 @@
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
-  "type": "module",
-  "dependencies": {}
+  "type": "module"
 }
