--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/clean-css": "4.2.5",
     "@types/csso": "4.2.0",
     "@types/fontfaceobserver": "2.1.0",
+    "@types/fs-extra": "9.0.12",
     "@types/lodash-es": "4.17.4",
     "@types/mocha": "8.2.2",
     "@types/node": "15.6.1",
+    "@types/url-join": "4.0.1",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
     "c8": "7.7.2",
@@ -51,6 +53,7 @@
     "semantic-release": "17.4.3",
     "syncpack": "5.7.11",
     "typescript": "4.3.2",
+    "url-join": "4.0.1",
     "utility-types": "3.10.0",
     "zod": "3.8.1"
   },
@@ -59,7 +62,8 @@
   },
   "files": [
     "lib",
-    "src/font-loader"
+    "src/font-loader",
+    "src/utilities/font-strip.py"
   ],
   "homepage": "https://github.com/escapace/web-fonts",
   "license": "MPL-2.0",
