--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,27 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   allow:
+    - dependency-name: "@types/bytes"
+    - dependency-name: "@types/clean-css"
+    - dependency-name: "@types/fontfaceobserver"
+    - dependency-name: "@types/lodash-es"
+    - dependency-name: "@types/url-join"
+    - dependency-name: "@types/wrap-ansi"
+    - dependency-name: "brotli-size"
+    - dependency-name: "bytes"
+    - dependency-name: "chalk"
     - dependency-name: "clean-css"
     - dependency-name: "esbuild"
+    - dependency-name: "execa"
     - dependency-name: "fontfaceobserver"
+    - dependency-name: "fs-extra"
+    - dependency-name: "gzip-size"
     - dependency-name: "hashids"
     - dependency-name: "lodash-es"
+    - dependency-name: "ora"
+    - dependency-name: "url-join"
     - dependency-name: "utility-types"
+    - dependency-name: "wrap-ansi"
     - dependency-name: "zod"
     - dependency-name: "*"
       dependency-type: "production"
