--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "@commitlint/cli": "12.1.4",
     "@commitlint/config-conventional": "12.1.4",
     "@ls-lint/ls-lint": "1.9.2",
+    "@types/bytes": "3.1.1",
     "@types/chai": "4.2.18",
     "@types/clean-css": "4.2.5",
-    "@types/csso": "4.2.0",
     "@types/fontfaceobserver": "2.1.0",
     "@types/fs-extra": "9.0.12",
     "@types/lodash-es": "4.17.4",
     "@types/mocha": "8.2.2",
     "@types/node": "15.6.1",
     "@types/url-join": "4.0.1",
+    "@types/wrap-ansi": "8.0.1",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
+    "brotli-size": "4.0.0",
+    "bytes": "3.1.0",
     "c8": "7.7.2",
     "chai": "4.3.4",
+    "chalk": "4.1.2",
     "clean-css": "5.1.5",
     "codecov": "3.8.2",
     "eslint": "7.27.0",
@@ -42,12 +46,14 @@
     "fastify-static": "4.2.3",
     "fontfaceobserver": "2.1.0",
     "fs-extra": "9.1.0",
+    "gzip-size": "6.0.0",
     "hashids": "2.2.8",
     "husky": "6.0.0",
     "is-ci": "3.0.0",
     "lint-staged": "11.0.0",
     "lodash-es": "4.17.21",
     "mocha": "8.4.0",
+    "ora": "6.0.1",
     "prettier": "2.3.0",
     "prettier-config-escapace": "1.0.0",
     "semantic-release": "17.4.3",
@@ -55,6 +61,8 @@
     "typescript": "4.3.2",
     "url-join": "4.0.1",
     "utility-types": "3.10.0",
+    "wrap-ansi": "8.0.1",
+    "zod": "3.8.1",
     "zod": "3.8.2"
   },
   "engines": {
