--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,8 +1,8 @@
 {
-  "all": true,
+  "all": false,
   "reporter": ["json", "text"],
-  "exclude": ["node_modules/**", "**/*.spec.?(m)@(j|t)s?(x)", "scripts", "test"],
   "excludeAfterRemap": true,
+  "exclude": ["node_modules/**", "**/*.spec.ts"],
   "branches": 100,
   "functions": 100,
   "statements": 100,
