--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
   },
-  "include": ["src", "test"]
+  "include": ["src", "test", "example"]
 }
