--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "",
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
+  "bin": {
+    "web-fonts": "./lib/cjs/cli.cjs"
+  },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "devDependencies": {
     "@commitlint/cli": "12.1.4",
@@ -20,6 +23,7 @@
     "@types/wrap-ansi": "8.0.1",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
+    "arg": "5.0.1",
     "brotli-size": "4.0.0",
     "bytes": "3.1.0",
     "chai": "4.3.4",
