--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "allowUnreachableCode": false,
-    "isolatedModules": true,
     "allowUnusedLabels": false,
     "declaration": true,
     "declarationMap": true,
@@ -10,6 +8,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": false,
+    "isolatedModules": true,
     "lib": ["es2015", "es2015.promise", "es2016", "es2017", "esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
@@ -21,9 +20,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext",
+    "target": "es2020",
     "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
   },
-  "include": ["src", "test", "example"]
+  "include": ["src"]
 }
