--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
   "bin": {
-    "web-fonts": "./lib/cjs/cli.cjs"
+    "web-fonts": "./lib/cli/cli.cjs"
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "devDependencies": {
@@ -18,36 +18,33 @@
     "@types/fs-extra": "9.0.12",
     "@types/lodash-es": "4.17.5",
     "@types/mocha": "8.2.2",
-    "@types/node": "15.6.1",
+    "@types/node": "16.9.2",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
-    "arg": "5.0.1",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "4.31.1",
+    "arg": "4.1.3",
     "brotli-size": "4.0.0",
     "bytes": "3.1.0",
     "chai": "4.3.4",
-    "chalk": "4.1.2",
+    "chalk": "2.4.2",
     "clean-css": "5.1.5",
     "codecov": "3.8.2",
     "esbuild": "0.12.28",
-    "eslint": "7.27.0",
-    "eslint-config-escapace": "3.8.0",
+    "eslint": "7.32.0",
+    "eslint-config-escapace": "3.9.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard-with-typescript": "20.0.0",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jsdoc": "35.1.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jsdoc": "36.1.0",
     "eslint-plugin-no-null": "1.0.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.0",
-    "execa": "5.1.1",
+    "execa": "4.1.0",
     "fast-glob": "3.2.5",
-    "fastify": "3.20.2",
-    "fastify-sensible": "3.1.1",
-    "fastify-static": "4.2.3",
-    "find-up": "6.0.0",
+    "find-up": "2.1.0",
     "fontfaceobserver": "2.1.0",
-    "fs-extra": "10.0.0",
+    "fs-extra": "9.1.0",
     "gzip-size": "6.0.0",
     "hashids": "2.2.8",
     "husky": "6.0.0",
@@ -57,14 +54,14 @@
     "mocha": "8.4.0",
     "nyc": "15.1.0",
     "ora": "6.0.1",
-    "prettier": "2.3.0",
+    "prettier": "2.4.1",
     "prettier-config-escapace": "1.0.0",
     "semantic-release": "17.4.3",
     "syncpack": "5.7.11",
-    "typescript": "4.3.2",
+    "typescript": "4.4.3",
     "url-join": "4.0.1",
     "utility-types": "3.10.0",
-    "wrap-ansi": "8.0.1",
+    "wrap-ansi": "7.0.0",
     "zod": "3.8.2"
   },
   "engines": {
@@ -72,7 +69,7 @@
   },
   "files": [
     "lib",
-    "src/font-loader",
+    "src/utilities/font-loader.ts",
     "src/utilities/font-strip.py"
   ],
   "homepage": "https://github.com/escapace/web-fonts",
@@ -81,11 +78,13 @@
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
     "build": "node ./scripts/build.mjs",
-    "lint": "ls-lint && eslint 'src/**/*.ts?(x)'",
+    "lint": "ls-lint && eslint 'src/**/*.ts?(x)' 'example/src/**/*.ts?(x)'",
     "prepare": "is-ci || husky install",
     "test": "node ./scripts/test.mjs && nyc mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
     "typecheck": "tsc --noEmit"
   },
-  "sideEffects": false,
-  "type": "commonjs"
+  "type": "commonjs",
+  "workspaces": [
+    "./example"
+  ]
 }
