--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bytes": "3.1.1",
     "@types/chai": "4.2.18",
     "@types/clean-css": "4.2.5",
+    "@types/find-up": "^4.0.0",
     "@types/fontfaceobserver": "2.1.0",
     "@types/fs-extra": "9.0.12",
     "@types/lodash-es": "4.17.5",
