--- a/package.json
+++ b/package.json
@@ -8,61 +8,60 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "devDependencies": {
-    "@commitlint/cli": "12.1.4",
-    "@commitlint/config-conventional": "12.1.4",
-    "@ls-lint/ls-lint": "1.9.2",
+    "@commitlint/cli": "13.1.0",
+    "@commitlint/config-conventional": "13.1.0",
+    "@ls-lint/ls-lint": "1.10.0",
     "@types/bytes": "3.1.1",
-    "@types/chai": "4.2.18",
+    "@types/chai": "4.2.21",
     "@types/clean-css": "4.2.5",
-    "@types/find-up": "^4.0.0",
     "@types/fontfaceobserver": "2.1.0",
     "@types/fs-extra": "9.0.12",
     "@types/lodash-es": "4.17.5",
-    "@types/mocha": "8.2.2",
-    "@types/node": "16.9.2",
+    "@types/mocha": "9.0.0",
+    "@types/node": "16.9.4",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "4.31.1",
-    "@typescript-eslint/parser": "4.31.1",
-    "arg": "4.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "arg": "5.0.1",
     "brotli-size": "4.0.0",
     "bytes": "3.1.0",
     "chai": "4.3.4",
-    "chalk": "2.4.2",
+    "chalk": "4.1.2",
     "clean-css": "5.1.5",
-    "codecov": "3.8.2",
+    "codecov": "3.8.3",
     "esbuild": "0.12.28",
-    "eslint": "7.32.0",
-    "eslint-config-escapace": "3.9.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard-with-typescript": "20.0.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsdoc": "36.1.0",
-    "eslint-plugin-no-null": "1.0.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "execa": "4.1.0",
-    "fast-glob": "3.2.5",
-    "find-up": "2.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-escapace": "^3.9.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "execa": "5.1.1",
+    "fast-glob": "3.2.7",
+    "find-up": "6.0.0",
     "fontfaceobserver": "2.1.0",
-    "fs-extra": "9.1.0",
+    "fs-extra": "10.0.0",
     "gzip-size": "6.0.0",
     "hashids": "2.2.8",
-    "husky": "6.0.0",
+    "husky": "7.0.2",
     "is-ci": "3.0.0",
-    "lint-staged": "11.0.0",
+    "lint-staged": "11.1.2",
     "lodash-es": "4.17.21",
-    "mocha": "8.4.0",
+    "mocha": "9.1.1",
     "nyc": "15.1.0",
     "ora": "6.0.1",
     "prettier": "2.4.1",
     "prettier-config-escapace": "1.0.0",
-    "semantic-release": "17.4.3",
-    "syncpack": "5.7.11",
+    "semantic-release": "18.0.0",
+    "syncpack": "5.8.15",
     "typescript": "4.4.3",
     "url-join": "4.0.1",
     "utility-types": "3.10.0",
-    "wrap-ansi": "7.0.0",
+    "wrap-ansi": "8.0.1",
     "zod": "3.8.2"
   },
   "engines": {
