--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/node": "16.9.4",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "arg": "5.0.1",
     "brotli-size": "4.0.0",
     "bytes": "3.1.0",
@@ -31,15 +31,15 @@
     "clean-css": "5.1.5",
     "codecov": "3.8.3",
     "esbuild": "0.12.28",
-    "eslint": "^7.32.0",
-    "eslint-config-escapace": "^3.9.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.1.0",
-    "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint": "7.32.0",
+    "eslint-config-escapace": "3.9.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard-with-typescript": "20.0.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jsdoc": "36.1.0",
+    "eslint-plugin-no-null": "1.0.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "5.1.0",
     "execa": "5.1.1",
     "fast-glob": "3.2.7",
     "find-up": "6.0.0",
