--- a/example/package.json
+++ b/example/package.json
@@ -31,7 +31,7 @@
   ],
   "private": true,
   "scripts": {
-    "build": "node ./scripts/build.mjs",
+    "build": "node ../lib/cli/cli.cjs --declaration --loader-file src/web-font-loader.js && node ./scripts/build.mjs",
     "dev": "npm run build && node ./lib/dev.cjs",
     "lint": "eslint 'src/**/*.ts?(x)'",
     "typecheck": "tsc --noEmit",
