--- a/example/package.json
+++ b/example/package.json
@@ -31,10 +31,10 @@
   ],
   "private": true,
   "scripts": {
-    "web-fonts": "node ../lib/cli/cli.cjs --declaration --loader-file src/web-font-loader.js",
     "build": "node ./scripts/build.mjs",
     "dev": "npm run build && node ./lib/dev.cjs",
     "lint": "eslint 'src/**/*.ts?(x)'",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "web-fonts": "node ../lib/cli/cli.cjs --declaration --loader-file src/web-font-loader.js"
   }
 }
