--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "lint": "ls-lint && eslint 'src/**/*.ts?(x)' 'example/src/**/*.ts?(x)'",
     "prepare": "is-ci || husky install",
     "test": "node ./scripts/test.mjs && nyc mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit -p tsconfig-local.json"
   },
   "type": "commonjs",
   "workspaces": [
