--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: release
 on:
   schedule:
     - cron: '10 16 * * 2'
@@ -6,40 +6,53 @@ on:
     types: [release]
 jobs:
   release:
-    name: Release
+    name: release
     runs-on: ubuntu-latest
     steps:
-      - name: Install required packages
-        run: |
-          sudo apt-get update
-          sudo apt-get install libgbm-dev
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v2
-      - name: Setup Node.js
+      - name: setup node
         uses: actions/setup-node@v2.4.0
         with:
           node-version: 16
-      - name: Cache
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: node cache
         uses: actions/cache@v2.1.6
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - name: Install dependencies
-        run: npm ci
-      - name: Typecheck
+      - name: pip cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: install dependencies
+        run: |
+          pip3 install -r requirements.txt
+          npm ci
+          cd example && npm ci
+      - name: typecheck
         run: npm run typecheck
-      - name: Test
+      - name: test
         run: npm run test
-      - name: Build
-        run: npm run build
-      - name: Release
+      - name: build
+        run: |
+          npm run build
+          cd example
+          npm run web-fonts
+          npm run typecheck
+          npm run build
+      - name: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: npx semantic-release
-      - name: Code Coverage
-        uses: codecov/codecov-action@v2.1.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
