--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "web-fonts": "./lib/cli/cli.cjs"
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
+  "dependencies": {
+    "esbuild": "0.12.28",
+    "fontfaceobserver": "2.1.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "13.1.0",
     "@commitlint/config-conventional": "13.1.0",
@@ -31,7 +35,6 @@
     "chalk": "4.1.2",
     "clean-css": "5.1.5",
     "codecov": "3.8.3",
-    "esbuild": "0.12.28",
     "eslint": "7.32.0",
     "eslint-config-escapace": "3.9.1",
     "eslint-config-prettier": "8.3.0",
@@ -44,7 +47,6 @@
     "execa": "5.1.1",
     "fast-glob": "3.2.7",
     "find-up": "6.0.0",
-    "fontfaceobserver": "2.1.0",
     "fs-extra": "10.0.0",
     "gzip-size": "6.0.0",
     "hashids": "2.2.8",
@@ -69,7 +71,7 @@
     "node": ">=14.17.0"
   },
   "files": [
-    "lib",
+    "lib/cli",
     "src/utilities/font-loader.ts",
     "src/utilities/font-strip.py"
   ],
@@ -78,7 +80,7 @@
   "private": true,
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
-    "build": "node ./scripts/build.mjs",
+    "build": "node ./scripts/build.mjs && mkdir -p lib/pack && npm pack --pack-destination lib/pack",
     "lint": "ls-lint && eslint 'src/**/*.ts?(x)' 'example/src/**/*.ts?(x)'",
     "prepare": "is-ci || husky install",
     "test": "node ./scripts/test.mjs && nyc mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
