--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10.0'
+          python-version: '3.8'
       - name: node cache
         uses: actions/cache@v2.1.6
         with:
@@ -35,6 +35,7 @@ jobs:
             ${{ runner.os }}-pip-
       - name: install dependencies
         run: |
+          pip3 install --upgrade pip
           pip3 install -r requirements.txt
           npm ci
           cd example && npm ci
