--- a/example/.gitignore
+++ b/example/.gitignore
@@ -1,4 +1,4 @@
-/api
+/functions
 /lib
 /public
 /src/web-font-loader.d.ts
@@ -137,5 +137,3 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
-.vercel
