--- a/example/package.json
+++ b/example/package.json
@@ -17,12 +17,13 @@
     "prettier": "2.4.1"
   },
   "devDependencies": {
+    "@netlify/functions": "^0.8.0",
     "@types/js-cookie": "2.2.7",
     "@types/lodash-es": "4.17.5",
     "@types/mustache": "4.1.2",
     "@types/node": "16.9.6",
     "@types/prettier": "2.3.2",
-    "@vercel/node": "1.12.1",
+    "aws-lambda-fastify": "^1.7.1",
     "esbuild": "0.13.12",
     "typescript": "4.4.3"
   },
