--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
     "build": "node ./scripts/build.mjs && mkdir -p lib/pack && npm pack --pack-destination lib/pack",
+    "build:example": "npm run build && cd example && npm ci && npm run build",
     "lint": "ls-lint && eslint 'src/**/*.ts?(x)' 'example/src/**/*.ts?(x)'",
     "prepare": "is-ci || husky install",
     "test": "node ./scripts/test.mjs && nyc mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
