--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
+    "@netlify/functions": "0.8.0",
+    "aws-lambda-fastify": "1.7.1",
     "fastify": "3.22.1",
     "fastify-cookie": "^5.3.1",
     "fastify-etag": "^2.1.0",
@@ -17,13 +19,11 @@
     "prettier": "2.4.1"
   },
   "devDependencies": {
-    "@netlify/functions": "^0.8.0",
     "@types/js-cookie": "2.2.7",
     "@types/lodash-es": "4.17.5",
     "@types/mustache": "4.1.2",
     "@types/node": "16.9.6",
     "@types/prettier": "2.3.2",
-    "aws-lambda-fastify": "^1.7.1",
     "esbuild": "0.13.12",
     "typescript": "4.4.3"
   },
