--- a/example/package.json
+++ b/example/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
-    "@netlify/functions": "0.8.0",
-    "aws-lambda-fastify": "1.7.1",
-    "fastify": "3.24.0",
-    "fastify-cookie": "^5.3.2",
+    "aws-lambda-fastify": "2.1.0",
+    "fastify": "3.27.2",
+    "fastify-cookie": "^5.5.0",
     "fastify-etag": "^2.1.0",
     "fastify-sensible": "3.1.2",
     "fastify-static": "4.5.0",
@@ -15,17 +14,24 @@
     "js-cookie": "^3.0.1",
     "lodash-es": "4.17.21",
     "mustache": "4.2.0",
-    "point-of-view": "^4.15.2",
-    "prettier": "2.4.1"
+    "point-of-view": "^5.1.0",
+    "prettier": "2.5.1"
   },
   "devDependencies": {
-    "@types/js-cookie": "2.2.7",
-    "@types/lodash-es": "4.17.5",
+    "@types/js-cookie": "3.0.1",
+    "@types/lodash-es": "4.17.6",
     "@types/mustache": "4.1.2",
-    "@types/node": "16.9.6",
-    "@types/prettier": "2.3.2",
-    "esbuild": "0.13.14",
-    "typescript": "4.4.3"
+    "@types/node": "17.0.19",
+    "@types/prettier": "2.4.4",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "esbuild": "0.14.23",
+    "eslint": "8.9.0",
+    "eslint-config-escapace": "3.12.4",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-editorconfig": "3.2.0",
+    "eslint-plugin-no-null": "1.0.2",
+    "typescript": "4.5.5"
   },
   "files": [
     "lib"
