--- a/package.json
+++ b/package.json
@@ -8,68 +8,63 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
-    "esbuild": "0.13.14",
+    "esbuild": "0.14.23",
     "fontfaceobserver": "2.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
+    "@commitlint/cli": "16.2.1",
+    "@commitlint/config-conventional": "16.2.1",
     "@ls-lint/ls-lint": "1.10.0",
-    "@semantic-release/exec": "6.0.1",
+    "@semantic-release/exec": "6.0.3",
     "@types/bytes": "3.1.1",
-    "@types/chai": "4.2.22",
+    "@types/chai": "4.3.0",
     "@types/clean-css": "4.2.5",
     "@types/fontfaceobserver": "2.1.0",
     "@types/fs-extra": "9.0.13",
-    "@types/lodash-es": "4.17.5",
-    "@types/mocha": "9.0.0",
-    "@types/node": "16.9.6",
+    "@types/lodash-es": "4.17.6",
+    "@types/mocha": "9.1.0",
+    "@types/node": "17.0.19",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
     "arg": "5.0.1",
     "brotli-size": "4.0.0",
-    "bytes": "3.1.1",
-    "chai": "4.3.4",
-    "chalk": "4.1.2",
-    "clean-css": "5.2.2",
-    "codecov": "3.8.3",
-    "eslint": "7.32.0",
-    "eslint-config-escapace": "3.10.0",
+    "bytes": "3.1.2",
+    "chai": "4.3.6",
+    "chalk": "5.0.0",
+    "clean-css": "5.2.4",
+    "eslint": "8.9.0",
+    "eslint-config-escapace": "3.12.4",
     "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard-with-typescript": "21.0.1",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsdoc": "36.1.0",
+    "eslint-plugin-editorconfig": "3.2.0",
     "eslint-plugin-no-null": "1.0.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "execa": "5.1.1",
-    "fast-glob": "3.2.7",
-    "find-up": "6.2.0",
+    "execa": "6.1.0",
+    "fast-glob": "3.2.11",
+    "find-up": "6.3.0",
     "fs-extra": "10.0.0",
-    "gzip-size": "6.0.0",
+    "gzip-size": "7.0.0",
     "hashids": "2.2.10",
-    "husky": "7.0.2",
-    "is-ci": "3.0.0",
-    "lint-staged": "11.1.2",
+    "husky": "7.0.4",
+    "is-ci": "3.0.1",
+    "lint-staged": "12.3.4",
     "lodash-es": "4.17.21",
-    "mocha": "9.1.1",
-    "netlify-cli": "6.14.10",
+    "mocha": "9.2.1",
     "nyc": "15.1.0",
-    "ora": "6.0.1",
-    "prettier": "2.4.1",
-    "prettier-config-escapace": "1.0.0",
-    "semantic-release": "18.0.0",
-    "syncpack": "5.8.15",
-    "typescript": "4.4.3",
+    "ora": "6.1.0",
+    "prettier": "2.5.1",
+    "prettier-config-escapace": "1.0.4",
+    "semantic-release": "19.0.2",
+    "strip-ansi": "7.0.1",
+    "syncpack": "6.2.0",
+    "typescript": "4.5.5",
     "url-join": "4.0.1",
     "utility-types": "3.10.0",
     "wrap-ansi": "8.0.1",
     "zod": "3.11.6"
   },
   "engines": {
-    "node": ">=14.17.0"
+    "node": ">=16.14.0"
   },
   "files": [
     "lib/cli",
@@ -81,15 +76,12 @@
   "private": true,
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
-    "build": "node ./scripts/build.mjs && mkdir -p lib/pack && npm pack --pack-destination lib/pack",
-    "example:deploy": "netlify deploy --prod",
-    "lint": "ls-lint && eslint 'src/**/*.ts?(x)' 'example/src/**/*.ts?(x)'",
+    "build": "node ./scripts/build.mjs && mkdir -p lib/pack && pnpm pack --pack-destination lib/pack",
+    "lint": "ls-lint && eslint 'src/**/*.ts?(x)'",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "is-ci || husky install",
     "test": "node ./scripts/test.mjs && nyc mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
     "typecheck": "tsc --noEmit -p tsconfig-local.json"
   },
-  "type": "commonjs",
-  "workspaces": [
-    "./example"
-  ]
+  "type": "commonjs"
 }
