--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "allowUnreachableCode": false,
-    "isolatedModules": true,
     "allowUnusedLabels": false,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": false,
-    "lib": ["es2015", "es2015.promise", "es2016", "es2017", "esnext", "dom"],
+    "isolatedModules": true,
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -25,5 +23,5 @@
     "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
   },
-  "include": ["src", "test", "example"]
+  "include": ["src", "test"]
 }
