--- a/package.json
+++ b/package.json
@@ -8,33 +8,33 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
-    "esbuild": "0.14.34",
+    "esbuild": "0.14.38",
     "fontfaceobserver": "2.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "16.2.3",
-    "@commitlint/config-conventional": "16.2.1",
+    "@commitlint/cli": "16.2.4",
+    "@commitlint/config-conventional": "16.2.4",
     "@ls-lint/ls-lint": "1.11.0",
     "@semantic-release/exec": "6.0.3",
     "@types/bytes": "3.1.1",
-    "@types/chai": "4.3.0",
+    "@types/chai": "4.3.1",
     "@types/clean-css": "4.2.5",
     "@types/fontfaceobserver": "2.1.0",
     "@types/fs-extra": "9.0.13",
     "@types/lodash-es": "4.17.6",
-    "@types/mocha": "9.1.0",
-    "@types/node": "17.0.19",
+    "@types/mocha": "9.1.1",
+    "@types/node": "17.0.31",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.22.0",
+    "@typescript-eslint/parser": "5.22.0",
     "arg": "5.0.1",
     "brotli-size": "4.0.0",
     "bytes": "3.1.2",
     "chai": "4.3.6",
     "chalk": "5.0.1",
     "clean-css": "5.3.0",
-    "eslint": "8.13.0",
+    "eslint": "8.14.0",
     "eslint-config-escapace": "3.12.5",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-editorconfig": "3.2.0",
@@ -42,29 +42,29 @@
     "execa": "6.1.0",
     "fast-glob": "3.2.11",
     "find-up": "6.3.0",
-    "fs-extra": "10.0.1",
+    "fs-extra": "10.1.0",
     "gzip-size": "7.0.0",
     "hashids": "2.2.10",
     "husky": "7.0.4",
     "is-ci": "3.0.1",
-    "lint-staged": "12.3.7",
+    "lint-staged": "12.4.1",
     "lodash-es": "4.17.21",
-    "mocha": "9.2.2",
+    "mocha": "10.0.0",
     "nyc": "15.1.0",
     "ora": "6.1.0",
     "prettier": "2.6.2",
     "prettier-config-escapace": "1.0.4",
     "semantic-release": "19.0.2",
     "strip-ansi": "7.0.1",
-    "syncpack": "6.2.0",
-    "typescript": "4.6.3",
+    "syncpack": "7.2.1",
+    "typescript": "4.6.4",
     "url-join": "5.0.0",
     "utility-types": "3.10.0",
     "wrap-ansi": "8.0.1",
     "zod": "3.14.4"
   },
   "engines": {
-    "node": ">=16.14.0"
+    "node": ">=17.0.0"
   },
   "files": [
     "lib/cli",
@@ -76,7 +76,7 @@
   "private": true,
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
-    "build": "node ./scripts/build.mjs && mkdir -p lib/pack && pnpm pack --pack-destination lib/pack",
+    "build": "node ./scripts/build.mjs",
     "lint": "ls-lint && eslint 'src/**/*.ts?(x)'",
     "preinstall": "npx only-allow pnpm",
     "prepare": "is-ci || husky install",
