chore: update workflows

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@commitlint/cli": "17.4.0",
     "@commitlint/config-conventional": "17.4.0",
     "@ls-lint/ls-lint": "1.11.2",
-    "@semantic-release/exec": "6.0.3",
     "@types/bytes": "3.1.1",
     "@types/chai": "4.3.4",
     "@types/clean-css": "4.2.6",
@@ -33,6 +32,7 @@
     "bytes": "3.1.2",
     "chai": "4.3.7",
     "chalk": "5.2.0",
+    "changelogithub": "0.12.7",
     "clean-css": "5.3.1",
     "eslint": "8.31.0",
     "eslint-config-escapace": "3.16.0",
@@ -54,7 +54,6 @@
     "ora": "6.1.2",
     "prettier": "2.8.2",
     "prettier-config-escapace": "1.0.4",
-    "semantic-release": "20.0.0",
     "strip-ansi": "7.0.1",
     "syncpack": "8.4.11",
     "typescript": "4.9.4",
