--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,60 +1,46 @@
 name: release
+
 on:
   push:
+    tags:
+      - 'v*'
     branches:
       - trunk
-  pull_request:
-    branches:
-      - trunk
+    paths-ignore:
+      - README.md
+      - LICENSE
+
 jobs:
-  release:
-    name: release
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      - name: pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-
-      - name: install pnpm
-        uses: pnpm/action-setup@v2.2.4
-        with:
-          version: 7.15.0
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11.0'
-          cache: 'pip'
-      - name: install dependencies
-        run: |
-          pip3 install --upgrade pip
-          pip3 install -r requirements.txt
-          pnpm install
-      - name: typecheck
-        run: pnpm run typecheck
-      - name: test
-        run: pnpm run test
-      - name: build
-        run: |
-          pnpm run build
-          docker build -t ${{ github.repository }}:latest .
-      - name: ghcr.io login
-        if: ${{ github.event_name == 'push' }}
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: release
-        if: ${{ github.event_name == 'push' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: pnpm exec semantic-release
+  context:
+    uses: ./.github/workflows/workflow-call-context.yaml
+  test-build:
+    needs:
+      - context
+    uses: ./.github/workflows/workflow-call-test-build.yaml
+    with:
+      ref: ${{ needs.context.outputs.ref }}
+      node-version: ${{ needs.context.outputs.node-version }}
+      pnpm-version: ${{ needs.context.outputs.pnpm-version }}
+      artifact-name: ${{ needs.context.outputs.version }}
+  build-container:
+    needs:
+      - context
+      - test-build
+    if: needs.context.outputs.environment == 'production'
+    uses: ./.github/workflows/workflow-call-build-container.yaml
+    concurrency: ${{ github.ref }}
+    with:
+      artifact-name: ${{ needs.context.outputs.version }}
+      file: Dockerfile
+      args: >-
+        --tag ghcr.io/${{ github.repository }}:${{ needs.context.outputs.version }}
+  github-release:
+    needs:
+      - build-container
+    if: needs.build-container.result == 'success'
+    uses: ./.github/workflows/workflow-call-github-release.yaml
+    with:
+      environment: ${{ needs.context.outputs.environment }}
+      node-version: ${{ needs.context.outputs.node-version }}
+      pnpm-version: ${{ needs.context.outputs.pnpm-version }}
+      ref: ${{ needs.context.outputs.ref }}
