chore: add pnpm version

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "zod": "3.20.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.12.1",
+    "pnpm": ">= 7.15.0"
   },
   "files": [
     "lib/cli",
