fix: missing files

--- a/.github/workflows/workflow-call-test-build.yaml
+++ b/.github/workflows/workflow-call-test-build.yaml
@@ -68,6 +68,8 @@ jobs:
         run: >-
           tar --exclude=node_modules
           -czvf context.tar.gz
+          ./Dockerfile
+          ./.dockerignore
           ./lib
           ./src/utilities/font-loader.ts
           ./src/utilities/font-strip.py
