--- a/package.json
+++ b/package.json
@@ -1,85 +1,53 @@
 {
-  "name": "@escapace/web-fonts",
+  "name": "monorepo",
   "description": "",
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
-  "bin": {
-    "web-fonts": "./lib/esm/cli.mjs"
-  },
   "bugs": "https://github.com/escapace/web-fonts/issues",
-  "dependencies": {
-    "arg": "5.0.2",
-    "bytes": "3.1.2",
-    "chalk": "5.2.0",
-    "esbuild": "0.17.13",
-    "execa": "7.1.1",
-    "fast-glob": "3.2.12",
-    "find-up": "6.3.0",
-    "fontfaceobserver": "2.3.0",
-    "fs-extra": "11.1.1",
-    "hashids": "2.2.11",
-    "lightningcss": "1.19.0",
-    "lodash-es": "4.17.21",
-    "ora": "6.3.0",
-    "strip-ansi": "7.0.1",
-    "url-join": "5.0.0",
-    "wrap-ansi": "8.1.0",
-    "zod": "3.21.4"
-  },
   "devDependencies": {
-    "@commitlint/cli": "17.5.0",
+    "@commitlint/cli": "17.5.1",
     "@commitlint/config-conventional": "17.4.4",
     "@ls-lint/ls-lint": "1.11.2",
-    "@types/bytes": "3.1.1",
-    "@types/chai": "4.3.4",
-    "@types/fontfaceobserver": "2.1.0",
-    "@types/fs-extra": "11.0.1",
-    "@types/lodash-es": "4.17.7",
-    "@types/mocha": "10.0.1",
-    "@types/node": "18.15.9",
-    "@types/url-join": "4.0.1",
-    "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
+    "arg": "5.0.2",
     "c8": "7.13.0",
     "chai": "4.3.7",
     "changelogithub": "0.12.7",
-    "eslint": "8.36.0",
+    "esbuild": "0.17.15",
+    "eslint": "8.37.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.2",
     "eslint-plugin-no-null": "1.0.2",
+    "execa": "7.1.1",
+    "fast-glob": "3.2.12",
+    "fs-extra": "11.1.1",
     "husky": "8.0.3",
     "is-ci": "3.0.1",
     "lint-staged": "13.2.0",
-    "mocha": "10.2.0",
+    "lodash-es": "4.17.21",
     "prettier": "2.8.7",
     "prettier-config-escapace": "1.0.5",
     "semver": "7.3.8",
     "syncpack": "9.8.4",
-    "typescript": "5.0.2",
-    "utility-types": "3.10.0"
+    "typescript": "5.0.3"
   },
   "engines": {
-    "node": ">=18.15.0",
-    "pnpm": ">=7.30.3"
+    "node": ">= 18.12.1",
+    "pnpm": ">= 8.0.0"
   },
-  "files": [
-    "lib/cli",
-    "src/utilities/font-loader.ts",
-    "src/utilities/font-strip.py"
-  ],
   "homepage": "https://github.com/escapace/web-fonts",
   "license": "MPL-2.0",
   "private": true,
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
-    "build": "node ./scripts/build.mjs",
-    "lint": "ls-lint && eslint 'src/**/*.ts?(x)'",
-    "preinstall": "npx only-allow pnpm",
+    "build": "pnpm run -r --filter './packages/*' build",
+    "lint": "ls-lint && pnpm run -r --filter './packages/*' lint",
     "prepare": "is-ci || husky install",
-    "test": "node ./scripts/test.mjs && c8 mocha --no-warnings --experimental-vm-modules --enable-source-maps 'lib/tests/**/*.spec.js'",
-    "typecheck": "tsc --noEmit -p tsconfig.json"
+    "release": "pnpm run -r --filter './packages/*' release",
+    "test": "pnpm run -r --filter './packages/*' test",
+    "typecheck": "pnpm run -r --filter './packages/*' typecheck"
   },
   "type": "module"
 }
