--- a/.github/workflows/workflow-call-github-release.yaml
+++ b/.github/workflows/workflow-call-github-release.yaml
@@ -7,6 +7,9 @@ on:
       environment:
         required: true
         type: string
+      version:
+        required: true
+        type: string
       node-version:
         required: true
         type: string
@@ -45,6 +48,21 @@ jobs:
             ${{ runner.os }}-pnpm-store
       - name: install dependencies
         run: pnpm install
+      # - name: build
+      #   run: pnpm run build
+      # - name: write .npmrc
+      #   if: inputs.environment == 'production'
+      #   run: |
+      #     cat << EOF > "$HOME/.npmrc"
+      #     registry-url: https:///
+      #       //npm.pkg.github.com/:_authToken=$NPM_TOKEN
+      #     EOF
+      #   env:
+      #     NPM_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      # - name: pnpm release
+      #   if: inputs.environment == 'production'
+      #   run: |
+      #     pnpm run release -- ${{ inputs.version }}
       - name: github release
         run: |
           if [[ "${{ inputs.environment }}" == "staging" ]]; then
