--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -43,16 +43,17 @@
     "@typescript-eslint/parser": "5.57.1",
     "c8": "7.13.0",
     "chai": "4.3.7",
-    "eslint": "8.37.0",
+    "eslint": "8.38.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.2",
     "eslint-plugin-no-null": "1.0.2",
-    "lint-staged": "13.2.0",
+    "lint-staged": "13.2.1",
     "mocha": "10.2.0",
     "prettier": "2.8.7",
     "prettier-config-escapace": "1.0.5",
-    "typescript": "5.0.3",
+    "tsx": "^3.12.6",
+    "typescript": "5.0.4",
     "utility-types": "3.10.0"
   },
   "engines": {
