--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -18,6 +18,7 @@
     "fast-glob": "3.2.12",
     "find-up": "6.3.0",
     "fontfaceobserver": "2.3.0",
+    "fontkit": "2.0.2",
     "fs-extra": "11.1.1",
     "hashids": "2.2.11",
     "lightningcss": "1.20.0",
@@ -31,16 +32,17 @@
   "devDependencies": {
     "@ls-lint/ls-lint": "1.11.2",
     "@types/bytes": "3.1.1",
-    "@types/chai": "4.3.4",
+    "@types/chai": "4.3.5",
     "@types/fontfaceobserver": "2.1.0",
+    "@types/fontkit": "2.0.3",
     "@types/fs-extra": "11.0.1",
     "@types/lodash-es": "4.17.7",
     "@types/mocha": "10.0.1",
-    "@types/node": "18.16.1",
+    "@types/node": "20.0.0",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "c8": "7.13.0",
     "chai": "4.3.7",
     "eslint": "8.39.0",
@@ -48,11 +50,11 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.2",
     "eslint-plugin-no-null": "1.0.2",
-    "lint-staged": "13.2.1",
+    "lint-staged": "13.2.2",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "prettier-config-escapace": "1.0.5",
-    "tsx": "3.12.6",
+    "tsx": "3.12.7",
     "typescript": "5.0.4",
     "utility-types": "3.10.0"
   },
@@ -62,6 +64,7 @@
   },
   "files": [
     "lib/cli",
+    "src/metrics.json",
     "src/utilities/font-loader.ts",
     "src/utilities/font-strip.py"
   ],
