--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -8,12 +8,13 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
+    "@sindresorhus/fnv1a": "3.0.0",
     "arg": "5.0.2",
     "browserslist": "4.21.5",
     "bytes": "3.1.2",
     "chalk": "5.2.0",
     "csstype": "3.1.2",
-    "esbuild": "0.17.18",
+    "esbuild": "0.17.19",
     "execa": "7.1.1",
     "fast-glob": "3.2.12",
     "find-up": "6.3.0",
@@ -23,7 +24,9 @@
     "hashids": "2.2.11",
     "lightningcss": "1.20.0",
     "lodash-es": "4.17.21",
+    "mlly": "1.2.1",
     "ora": "6.3.0",
+    "safe-stable-stringify": "2.4.3",
     "strip-ansi": "7.0.1",
     "url-join": "5.0.0",
     "wrap-ansi": "8.1.0",
@@ -37,11 +40,11 @@
     "@types/fs-extra": "11.0.1",
     "@types/lodash-es": "4.17.7",
     "@types/mocha": "10.0.1",
-    "@types/node": "20.1.0",
+    "@types/node": "20.1.3",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
     "c8": "7.13.0",
     "chai": "4.3.7",
     "eslint": "8.40.0",
@@ -69,7 +72,6 @@
   },
   "files": [
     "lib/cli",
-    "src/metrics.json",
     "src/utilities/font-loader.ts",
     "src/utilities/font-strip.py"
   ],
