--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -5,19 +5,20 @@
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
     "@escapace/web-fonts-container": "workspace:*",
+    "@nodelib/fs.walk": "1.2.8",
     "arg": "5.0.2",
     "chalk": "5.2.0",
     "fontkit": "2.0.2",
-    "fs-extra": "11.1.1",
-    "lodash-es": "4.17.21"
+    "lodash-es": "4.17.21",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@types/fontkit": "2.0.3",
     "@types/lodash-es": "4.17.7",
-    "@types/node": "20.1.0",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
-    "esbuild": "0.17.18",
+    "@types/node": "20.1.3",
+    "@types/prettier": "2.7.2",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
     "eslint": "8.40.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
@@ -32,7 +33,8 @@
   "license": "MPL-2.0",
   "private": true,
   "scripts": {
-    "build": "node ./scripts/build.mjs",
+    "build": "node ../../scripts/build.mjs",
+    "codegen": "tsx src/codegen.ts > ../web-fonts/src/fonts.ts",
     "lint": "eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
     "typecheck": "tsc --noEmit"
   },
