--- a/packages/web-fonts/package.json
+++ b/packages/web-fonts/package.json
@@ -9,20 +9,38 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@escapace/web-fonts-container": "workspace:*",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
+    "eslint": "8.40.0",
+    "eslint-config-escapace": "3.17.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-editorconfig": "4.0.3",
+    "eslint-plugin-no-null": "1.0.2",
+    "lint-staged": "13.2.2",
+    "prettier": "2.8.8",
+    "prettier-config-escapace": "1.0.5",
     "typescript": "5.0.4"
   },
+  "exports": {
+    ".": {
+      "import": "./lib/esm/index.mjs",
+      "types": "./lib/types/index.d.ts"
+    }
+  },
   "files": [
+    "lib/esm",
     "lib/types"
   ],
   "homepage": "https://github.com/escapace/web-fonts",
   "keywords": [],
   "license": "MPL-2.0",
+  "module": "lib/esm/index.mjs",
   "private": false,
   "scripts": {
-    "build": "cp node_modules/@escapace/web-fonts-container/lib/types/types-public.d.ts lib/types/types.d.ts",
+    "build": "node ../../scripts/build.mjs && cp src/types.d.ts lib/types",
+    "lint": "eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
     "release": "node ../../scripts/release.mjs",
-    "typecheck": "tsc --noEmit -p tsconfig.json"
+    "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
   "types": "lib/types/index.d.ts"
